2003-09-01  Pavel Roskin  <proski@gnu.org>

	* widget.h: Define type bcback for button callbacks.

	* widget.c (listbox_new): Remove "action" argument.  Listboxes
	without callbacks default to closing the dialog.  Adjust all
	users.  This fixes double click on completion listbox.
	* widget.h: Use uppercase names for the return values of the
	listbox callback.

	* hotlist.c (update_path_name): Avoid using global variable.
	(l_call): Likewise.

	* widget.h: Eliminate listbox_cback.  Call listbox callback
	whenever it's defined.  Adjust all users.

	* widget.h: Use exact type in the listbox callback.  Adjust all
	legitimate users, remove all unused callbacks.

	* boxes.c: Fix GUI code for some non-default configurations.
	* listmode.c: Likewise.

2003-08-31  Pavel Roskin  <proski@gnu.org>

	* widget.h (button_new): Remove unused extra argument.  Adjust
	all dependencies.

	* option.c (check_options): Remove tk field.
	* widget.c: Comment fix to get rid of references to Tk.
	* wtools.c (real_input_dialog_help): Rename tk_name to histname.
	Remove names from non-input widgets.

	* widget.h: Completely get rid of tkname.  Rename it to histname
	for the input widget.  Adjust all dependencies.

	* dlg.h (struct Widget): Remove tkname field.
	(init_widget): Remove tkname argument.
	* widget.h (listbox_new): Likewise.
	Adjust all dependencies.

2003-08-29  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* cmd.c (edit_symlink_cmd): Fix possible off-by-one after
	readlink().
	* file.c (make_symlink): Likewise.
	* main.c (copy_readlink): Likewise.
	* screen.c (display_mini_info): Likewise.
	(chdir_to_readlink): Likewise.
	* util.c (resolve_symlinks): Likewise.

2003-08-18  Pavel Roskin  <proski@gnu.org>

	* cmd.c (delete_cmd_local): New function.  Remove file under the
	cursor, regardless of marks.
	* screen.c (panel_keymap): Bind it to F18.

	* file.c (panel_operate_generate_prompt): Remove source
	calculation, it doesn't belong here.