@@ -1,5 +1,8 @@
 2003-09-01  Pavel Roskin  <proski@gnu.org>
 
+	* listmode.c: Use callbacks for Add and Remove buttons.  Don't
+	run dialog in the loop, it doesn't work this way.
+
 	* widget.h: Define type bcback for button callbacks.
 
 	* widget.c (listbox_new): Remove "action" argument.  Listboxes
